# yougile-mcp

./: .gitignore  README.md  flake.nix  pyproject.toml
src/core/: client.py
src/yougile_mcp/tools/: _auth_helper.py
